@@ -1,3 +1,7 @@
+2017-06-04  Natalia Portillo  <claunia@claunia.com>
+
+	* UploadStatsController.cs: Added support for versions.
+
 2017-06-03  Natalia Portillo  <claunia@claunia.com>
 
 	* dos.css:
